<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_large"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_height"
        android:text="@string/room_dialog_heading"
        style="@style/dialog_header"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_room_info"
        style="@style/dialog_info"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_height"
        android:id="@+id/room_name"
        android:hint="@string/hint_room_name"
        style="@style/regular_text"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_height"
        android:id="@+id/button_room_submit"
        android:text="@string/text_submit"
        style="@style/regular_buttons"/>
</LinearLayout>